# oh-my-code

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md
config/: default.toml
docs/superpowers/plans/: 2026-04-05-env-quick-start.md  2026-04-05-minimax-anthropic-provider.md
docs/superpowers/specs/: 2026-04-05-env-quick-start-design.md  2026-04-05-minimax-anthropic-provider-design.md
src/: cli.rs  config.rs
src/model/: claude.rs
